==> u-blox/mbed-os/features/FEATURE_LWIP/lwip-interface/lwip-eth/arch/TARGET_Freescale/k64f_emac.cpp <==
#include "cmsis_os.h"
#include "sys_arch.h"
#include "fsl_phy.h"
#include <ctype.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "mbed_interface.h"
#include "emac_stack_mem.h"
#include "mbed_assert.h"
#include "netsocket/nsapi_types.h"
#include "mbed_shared_queues.h"
#include "k64f_emac.h"
#include "k64f_emac_config.h"
#define ENET_BuffSizeAlign(n) ENET_ALIGN(n, ENET_BUFF_ALIGNMENT)
#define ENET_ALIGN(x,align)   ((unsigned int)((x) + ((align)-1)) & (unsigned int)(~(unsigned int)((align)- 1)))
#define FLAG_TX  1
#define FLAG_RX  2
#define THREAD_PRIORITY (osPriorityNormal)
#define THREAD_STACKSIZE (DEFAULT_THREAD_STACKSIZE * 5)
#define THREAD_STACKSIZE DEFAULT_THREAD_STACKSIZE
#define PHY_TASK_PERIOD_MS      200

bool K64F_EMAC::low_level_init_successful()
{
  uint8_t i;
  uint32_t sysClock;
  phy_speed_t phy_speed;
  phy_duplex_t phy_duplex;
  uint32_t phyAddr = 0;
  bool link = false;
  enet_config_t config;

  // Allocate RX descriptors
  rx_desc_start_addr = (uint8_t *)calloc(1, sizeof(enet_rx_bd_struct_t) * ENET_RX_RING_LEN + ENET_BUFF_ALIGNMENT);
  if(!rx_desc_start_addr)
    return false;

  // Allocate TX descriptors
  tx_desc_start_addr = (uint8_t *)calloc(1, sizeof(enet_tx_bd_struct_t) * ENET_TX_RING_LEN + ENET_BUFF_ALIGNMENT);
  if(!tx_desc_start_addr)
    return false;

  rx_desc_start_addr = (uint8_t *)ENET_ALIGN(rx_desc_start_addr, ENET_BUFF_ALIGNMENT);
  tx_desc_start_addr = (uint8_t *)ENET_ALIGN(tx_desc_start_addr, ENET_BUFF_ALIGNMENT);

  /* Create buffers for each receive BD */
  for (i = 0; i < ENET_RX_RING_LEN; i++) {
    rx_buff[i] = emac_stack_mem_alloc(ENET_ETH_MAX_FLEN, ENET_BUFF_ALIGNMENT);
    if (NULL == rx_buff[i])
      return false;

    rx_ptr[i] = (uint32_t*)emac_stack_mem_ptr(rx_buff[i]);
  }

  tx_consume_index = tx_produce_index = 0;

  /* prepare the buffer configuration. */
  enet_buffer_config_t buffCfg = {
    ENET_RX_RING_LEN,
    ENET_TX_RING_LEN,
    ENET_ALIGN(ENET_ETH_MAX_FLEN, ENET_BUFF_ALIGNMENT),
    0,
    (volatile enet_rx_bd_struct_t *)rx_desc_start_addr,
    (volatile enet_tx_bd_struct_t *)tx_desc_start_addr,
    (uint8_t *)&rx_ptr,
    NULL,
  };
#if (defined(TARGET_K64F) && (defined(TARGET_FRDM)))
  k64f_init_eth_hardware();
#endif

#if (defined(TARGET_K66F) && (defined(TARGET_FRDM)))
  k66f_init_eth_hardware();
#endif

  sysClock = CLOCK_GetFreq(kCLOCK_CoreSysClk);

  ENET_GetDefaultConfig(&config);

  PHY_Init(ENET, 0, sysClock);
  PHY_GetLinkStatus(ENET, phyAddr, &link);
  if (link)
  {
    /* Get link information from PHY */
    PHY_GetLinkSpeedDuplex(ENET, phyAddr, &phy_speed, &phy_duplex);
    /* Change the MII speed and duplex for actual link status. */
    config.miiSpeed = (enet_mii_speed_t)phy_speed;
    config.miiDuplex = (enet_mii_duplex_t)phy_duplex;
    config.interrupt = kENET_RxFrameInterrupt | kENET_TxFrameInterrupt;
  }
  config.rxMaxFrameLen = ENET_ETH_MAX_FLEN;
  config.macSpecialConfig = kENET_ControlFlowControlEnable;
  config.txAccelerConfig = 0;
  config.rxAccelerConfig = kENET_RxAccelMacCheckEnabled;
  ENET_Init(ENET, &g_handle, &config, &buffCfg, hwaddr, sysClock);

#if defined(TOOLCHAIN_ARM)
#if defined(__OPTIMISE_TIME) && (__ARMCC_VERSION < 5060750)
  /* Add multicast groups
     work around for https://github.com/ARMmbed/mbed-os/issues/4372 */
  ENET->GAUR = 0xFFFFFFFFu;
  ENET->GALR = 0xFFFFFFFFu;
#endif
#endif

  ENET_SetCallback(&g_handle, &K64F_EMAC::ethernet_callback, this);
  ENET_ActiveRead(ENET);

  return true;
}

emac_stack_mem_t *K64F_EMAC::low_level_input(int idx)
{
  volatile enet_rx_bd_struct_t *bdPtr = g_handle.rxBdCurrent;
  emac_stack_mem_t *p = NULL;
  emac_stack_mem_t *temp_rxbuf = NULL;
  u32_t length = 0;
  const u16_t err_mask = ENET_BUFFDESCRIPTOR_RX_TRUNC_MASK | ENET_BUFFDESCRIPTOR_RX_CRC_MASK |
                         ENET_BUFFDESCRIPTOR_RX_NOOCTET_MASK | ENET_BUFFDESCRIPTOR_RX_LENVLIOLATE_MASK;

#ifdef LOCK_RX_THREAD
  /* Get exclusive access */
  TXLockMutex.lock();
#endif

  /* Determine if a frame has been received */
  if ((bdPtr->control & err_mask) != 0) {
    /* Re-use the same buffer in case of error */
    update_read_buffer(NULL);
  } else {
    /* A packet is waiting, get length */
    length = bdPtr->length;

    /* Zero-copy */
    p = rx_buff[idx];
    emac_stack_mem_set_len(p, length);

    /* Attempt to queue new buffer */
    temp_rxbuf = emac_stack_mem_alloc(ENET_ETH_MAX_FLEN, ENET_BUFF_ALIGNMENT);
    if (NULL == temp_rxbuf) {
      /* Re-queue the same buffer */
      update_read_buffer(NULL);

#ifdef LOCK_RX_THREAD
      TXLockMutex.unlock();
#endif

      return NULL;
    }

    rx_buff[idx] = temp_rxbuf;
    rx_ptr[idx] = (uint32_t*)emac_stack_mem_ptr(rx_buff[idx]);

    update_read_buffer((uint8_t*)rx_ptr[idx]);

    /* Save size */
    emac_stack_mem_set_chain_len(p, length);
  }

#ifdef LOCK_RX_THREAD
  osMutexRelease(TXLockMutex);
#endif

  return p;
}

void K64F_EMAC::thread_function(void* pvParameters)
{
    struct K64F_EMAC *k64f_enet = static_cast<K64F_EMAC *>(pvParameters);

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX|FLAG_TX, osFlagsWaitAny, osWaitForever);

        LWIP_ASSERT("osThreadFlagsWait error", !(flags & osFlagsError));

        if (flags & FLAG_RX) {
            k64f_enet->packet_rx();
        }

        if (flags & FLAG_TX) {
            k64f_enet->packet_tx();
        }
    }
}

void K64F_EMAC::packet_rx()
{
    static int idx = 0;

    while ((g_handle.rxBdCurrent->control & ENET_BUFFDESCRIPTOR_RX_EMPTY_MASK) == 0) {
        input(idx);
        idx = (idx + 1) % ENET_RX_RING_LEN;
    }
}

bool K64F_EMAC::link_out(emac_stack_mem_chain_t *chain)
{
  emac_stack_mem_t *q;
  emac_stack_mem_t *temp_pbuf;
  uint8_t *psend = NULL, *dst;

  temp_pbuf = emac_stack_mem_alloc(emac_stack_mem_chain_len(chain), ENET_BUFF_ALIGNMENT);
  if (NULL == temp_pbuf)
    return false;

  psend = (uint8_t*)emac_stack_mem_ptr(temp_pbuf);
  for (q = emac_stack_mem_chain_dequeue(&chain), dst = psend; q != NULL; q = emac_stack_mem_chain_dequeue(&chain)) {
    memcpy(dst, emac_stack_mem_ptr(q), emac_stack_mem_len(q));
    dst += emac_stack_mem_len(q);
  }

  /* Check if a descriptor is available for the transfer. */
  if (xTXDCountSem.wait(0) == 0)
    return false;

  /* Get exclusive access */
  TXLockMutex.lock();

  /* Save the buffer so that it can be freed when transmit is done */
  tx_buff[tx_produce_index % ENET_TX_RING_LEN] = temp_pbuf;
  tx_produce_index += 1;

  /* Setup transfers */
  g_handle.txBdCurrent->buffer = psend;
  g_handle.txBdCurrent->length = emac_stack_mem_len(temp_pbuf);
  g_handle.txBdCurrent->control |= (ENET_BUFFDESCRIPTOR_TX_READY_MASK | ENET_BUFFDESCRIPTOR_TX_LAST_MASK);

  /* Increase the buffer descriptor address. */
  if (g_handle.txBdCurrent->control & ENET_BUFFDESCRIPTOR_TX_WRAP_MASK)
    g_handle.txBdCurrent = g_handle.txBdBase;
  else
    g_handle.txBdCurrent++;

  /* Active the transmit buffer descriptor. */
  ENET->TDAR = ENET_TDAR_TDAR_MASK;

  /* Restore access */
  TXLockMutex.unlock();

  return true;
}

void K64F_EMAC::phy_task()
{
    static PHY_STATE prev_state = {STATE_UNKNOWN, (phy_speed_t)STATE_UNKNOWN, (phy_duplex_t)STATE_UNKNOWN};

    uint32_t phyAddr = 0;

    // Get current status
    PHY_STATE crt_state;
    bool connection_status;
    PHY_GetLinkStatus(ENET, phyAddr, &connection_status);
    crt_state.connected = connection_status;
    // Get the actual PHY link speed
    PHY_GetLinkSpeedDuplex(ENET, phyAddr, &crt_state.speed, &crt_state.duplex);

    // Compare with previous state
    if (crt_state.connected != prev_state.connected) {
        emac_link_state_cb(crt_state.connected);
    }

    if (crt_state.speed != prev_state.speed) {
      uint32_t rcr = ENET->RCR;
      rcr &= ~ENET_RCR_RMII_10T_MASK;
      rcr |= ENET_RCR_RMII_10T(!crt_state.speed);
      ENET->RCR = rcr;
    }

    prev_state = crt_state;
}

bool K64F_EMAC::power_up()
{
  /* Initialize the hardware */
  if (!low_level_init_successful())
    return false;

  /* Worker thread */
  thread = create_new_thread("k64f_emac_thread", &K64F_EMAC::thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &thread_cb);

  /* Trigger thread to deal with any RX packets that arrived before thread was started */
  rx_isr();

  /* PHY monitoring task */
  prev_state.connected = STATE_UNKNOWN;
  prev_state.speed = (phy_speed_t)STATE_UNKNOWN;
  prev_state.duplex = (phy_duplex_t)STATE_UNKNOWN;

  phy_task_handle = mbed::mbed_event_queue()->call_every(PHY_TASK_PERIOD_MS, mbed::callback(this, &K64F_EMAC::phy_task));

  /* Allow the PHY task to detect the initial link state and set up the proper flags */
  osDelay(10);

  return true;
}

uint32_t K64F_EMAC::get_mtu_size() const
{
  return K64_ETH_MTU_SIZE;
}

void K64F_EMAC::get_ifname(char *name, uint8_t size) const
{
  memcpy(name, K64_ETH_IF_NAME, (size < sizeof(K64_ETH_IF_NAME)) ? size : sizeof(K64_ETH_IF_NAME));
}

uint8_t K64F_EMAC::get_hwaddr_size() const
{
    return K64F_HWADDR_SIZE;
}
